services/identity/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/version: v1
  name: dex
spec:
  ports:
    - name: web
      port: 5556
      targetPort: 5556
#      targetPort: 5555
#    - name: telemetry
#      port: 5558
#      targetPort: 5558
#    - name: grpc
#      port: 5557
#      targetPort: 5557

  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/version: v1
  type: ClusterIP
