services/identity/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/service-upstream: "false"
spec:
  tls:
    - hosts:
        - dex.wolkenschloss.local
      secretName: dex-cert
  rules:
    - host: dex.wolkenschloss.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
